# mediaexplorer

./: .gitignore  AGENTS.md  Makefile  README.md  main.py  pyproject.toml
config/: yt-dlp.conf
docs/: 01_environment.md  02_workflow.md  03_codex_rules.md  04_agent_behavior.md  changelog.md  chatgpt_context.md  decision_log.md  project_vision.md  quick_reference.md  roadmap_v0.3.md  roadmap_v0.4.md  session_handoff.md  stable_baseline.md
scripts/: audio.py  batch.py  download.py  formats.py  info.py  playlist.py  test.py
src/mediaexplorer/: __init__.py  paths.py  validation.py  ytdlp.py
tests/: test_download.py  test_paths.py  test_playlist.py  test_ui_client.py  test_ytdlp.py
ui_client/: README.md  app.py
